# bommie_following

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/bommie_following/: bommie_planner.hpp  stereo_undistorter.hpp
launch/: stereo_rectifier.launch
rviz/: visualization.rviz
src/: bommie_follower_node.cpp  bommie_planner.cpp  stereo_undistorter.cpp  stereo_undistorter_node.cpp
